test/src/e2e_vm_tests/test_programs/Should_succeed/language/neq_4_test/src/main.sw
script;

fn main() -> bool {
    4 != 4 // should be false
}
