test/src/e2e_vm_tests/test_programs/should_fail/utf_chars/src/main.sw
script;

struct Data<T> {
    value: T
}

impl<T> Data<T> {
  fn new(value: T) -> Data<T> {
    // this ↓↓↓↓↓   
    Data {
        val // val is not a data member so this should be a compile error
    }
  }
}

fn main() -> bool {
    false
}
